AWS_EKS/7.Ingress_Basics_Deploy/2.Ingress_service_with_Ingress_Rule/kube_manifests_Ingress_Rules/Nginx-App1-NodePortService.yml
apiVersion: v1
kind: Service
metadata:
  name: app1-nginx-nodeport-service
spec:
  selector:
    app: app1-nginx
  type: NodePort
  ports:
  - name:  name-of-the-port
    port:  80
    targetPort:  80
